--- a/src/styles/components/_youtube.scss
+++ b/src/styles/components/_youtube.scss
@@ -24,36 +24,6 @@
 
   transition: width 250ms ease-in-out;
 
-  .noise-container {
-    position: absolute;
-    top: 0;
-    z-index: 3;
-    opacity: 1;
-    background-color: #000;
-    transition: all 0.5s linear;
-    pointer-events: none;
-
-    &.fade-out {
-      opacity: 0;
-    }
-
-    .absolute-center {
-      position: absolute;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      img {
-        width: 400px;
-        max-width: 90vw;
-        height: auto;
-      }
-    }
-  }
-
   @keyframes rotate {
     0% {
       transform: rotate(0deg);
@@ -248,5 +218,35 @@
     color: $secondary;
     padding: 20px 0 0 10px;
     font-size: 24px;
+  }
+}
+
+.noise-container {
+  position: absolute;
+  top: 0;
+  z-index: 999;
+  opacity: 1;
+  background-color: #000;
+  transition: all 0.5s linear;
+  pointer-events: none;
+
+  &.fade-out {
+    opacity: 0;
+  }
+
+  .absolute-center {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    img {
+      width: 400px;
+      max-width: 90vw;
+      height: auto;
+    }
   }
 }
